# novels-manga-to-epub

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: cleaner.py  epub_builder.py  mailer.py  manga_builder.py  manga_scraper.py  models.py  scraper.py  settings.py
src/libs/: stealth.py
src/manga/: manga_builder.py  manga_scraper.py
src/novel/: epub_builder.py  scraper.py
